[gd_scene load_steps=9 format=2]

[ext_resource path="res://levels/Main.gd" type="Script" id=1]
[ext_resource path="res://entities/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://utils/AcceleratingTimer.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 236.449, 242.515, 0, 0, 0, 0, 2652.49, 229.432, 0, 0, 0, 0, 2656.85, 2165.75, 0, 0, 0, 0, 245.171, 2174.47, 0, 0, 0, 0, 232.088, 233.793 )
}

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 0, 2400 )

[sub_resource type="SegmentShape2D" id=3]

custom_solver_bias = 0.0
a = Vector2( -192, 0 )
b = Vector2( 2688, 0 )

[node name="Main" type="Node2D"]

script = ExtResource( 1 )
Enemy = ExtResource( 2 )

[node name="Player" parent="." index="0" instance=ExtResource( 3 )]

position = Vector2( 1440, 1200 )
scale = Vector2( 0.8, 0.8 )

[node name="Enemies" type="YSort" parent="." index="1"]

sort_enabled = true

[node name="Bullets" type="YSort" parent="." index="2"]

sort_enabled = true
_sections_unfolded = [ "Sort" ]

[node name="SpawnZone" type="Path2D" parent="." index="3"]

editor/display_folded = true
self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="PathFollow" type="PathFollow2D" parent="SpawnZone" index="0"]

position = Vector2( 236.449, 242.515 )
rotation = -0.0054043
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="UI" type="CanvasLayer" parent="." index="4"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="HUD" parent="UI" index="0" instance=ExtResource( 4 )]

_sections_unfolded = [ "Grow Direction", "Material", "Rect", "Theme", "Visibility" ]

[node name="SpawnTimer" parent="." index="5" instance=ExtResource( 5 )]

autostart = true
INITIAL_DELAY = 3.0
GOAL_DELAY = 0.5
INITIAL_RATE = 1
TYPE = 0

[node name="SpawnTimer2" parent="." index="6" instance=ExtResource( 5 )]

autostart = true
INITIAL_DELAY = 3.0
GOAL_DELAY = 0.5
INITIAL_RATE = 1
TYPE = 0

[node name="SpawnTimer3" parent="." index="7" instance=ExtResource( 5 )]

autostart = true
INITIAL_DELAY = 3.0
GOAL_DELAY = 0.5
INITIAL_RATE = 1
TYPE = 0

[node name="WorldBoundaries" type="StaticBody2D" parent="." index="8"]

editor/display_folded = true
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="left" type="CollisionShape2D" parent="WorldBoundaries" index="0"]

shape = SubResource( 2 )

[node name="right" type="CollisionShape2D" parent="WorldBoundaries" index="1"]

position = Vector2( 2880, 0 )
shape = SubResource( 2 )

[node name="top" type="CollisionShape2D" parent="WorldBoundaries" index="2"]

position = Vector2( 192, 0 )
shape = SubResource( 3 )

[node name="bottom" type="CollisionShape2D" parent="WorldBoundaries" index="3"]

position = Vector2( 240, 2400 )
shape = SubResource( 3 )

[connection signal="hp_updated" from="Player" to="UI/HUD" method="_on_Player_hp_updated"]

[connection signal="score_updated" from="Player" to="UI/HUD" method="_on_Player_score_updated"]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[connection signal="timeout" from="SpawnTimer2" to="." method="_on_SpawnTimer_timeout"]

[connection signal="timeout" from="SpawnTimer3" to="." method="_on_SpawnTimer_timeout"]


